1998-10-31  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* lock_file.c (krb5_lock_file): Move the flock() fallback code
		from fcc_maybe.c into krb5_lock_file().  This works around
		the bug that certain lossy operating systems (mainly from
		our good friends at SunSoft) do not support
		POSIX_FILE_LOCKS on all filesystems (namely tmpfs) but do
		support flock on those filesystems.

1998-10-27  Marc Horowitz  <marc@mit.edu>

	* c_ustime.c, localaddr.c: moved here from lib/crypto

	* ktdefname.c (krb5_kt_default_name): there is code in the tree
	(notably, the admin server code) which uses globals to set the
	keytab which will be used by gssapi.  this is gross, and we need a
	better answer.  However, even that didn't work if there was an env
	var or krb5.conf variable, since those override krb5_defkeyname.
	Add a new global, krb5_overridekeyname, which really does override
	all the other keytab locators.  While I'm at it, make the buffer
	overflow checks sane.

Fri Sep 25 22:32:16 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* ccdefname.c: We shouldn't try to use the CCache API on Unix
		systems.  (The maze of #ifdef's was confusing.)

Tue Sep  1 15:44:11 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* ccdefname.c (krb5_cc_default_name): Changed the PC version to
 		use the CCache API by default.  Removed the old Macintosh
 		code that had been commented out.  (If we need to
 		ressurect it, we'll get it from CVS.)

Fri Aug 21 17:37:00 1998  Miro Jurisic  <meeroh@mit.edu>

	* ccdefname.c.c (krb5_cc_default_name): Changed the Mac
			version to use CCache API by default.

Thu Jul 16 09:59:34 1998  Ezra Peisach  <epeisach@mit.edu>

	* changepw.c (krb5_change_password): Changes casts from char * to
         	krb5_octet * to match krb5_address structure elements.

Wed Jul  1 17:54:56 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* macsock.c(inet_ntoa): Fix obvious bug where we were returning a
 		pointer to an automatic variable which should have been a